# bitarr

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml
src/: bit_fmt.rs  iter.rs  lib.rs  store.rs
