[package]
name = "bitarr"
version = "0.2.0"
edition = "2021"
description = "A fast and efficient Rust implementation of a BitSet, supporting multiple backing stores"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/bitarr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]

[package.metadata.featurex]
ignored = ["default?"]
